# ReadFileMWE

./: CMakeLists.txt
src/: mwe.cpp  sleepHelper.cpp
